Finish main wireframe

--- a/index.html
+++ b/index.html
@@ -5,11 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./reset.css" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="shortcut icon" href="./images/rocket.png" type="image/x-icon" />
     <title>SpaceX</title>
   </head>
   <body>
     <header>
-      <img class="logo" src="./images/spacex-logo.jpg" alt="SpaceX Logo" />
+      <img
+        class="logo"
+        src="./images/SpaceX_logo_black.svg.png"
+        alt="SpaceX Logo"
+      />
       <nav class="links">
         <a href="#">FALCON 9</a>
         <a href="#">FALCON HEAVY</a>
@@ -22,18 +27,20 @@
       </nav>
       <nav class="shop">
         <a href="#">SHOP</a>
-        <img src="#" alt="Menu" />
+        <img src="./images/bar.png" alt="Menu" />
       </nav>
     </header>
     <main>
       <section>
         <h1>UPCOMING LAUNCH</h1>
+        <br />
         <p>PSYCHE MISSION</p>
+
         <button>LEARN MORE</button>
       </section>
     </main>
     <footer>
-      <button>arrow</button>
+      <p class="down-arrow"></p>
     </footer>
   </body>
 </html>
