--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
     </header>
     <main>
-      <section>
+      <section class="animate">
         <h1>UPCOMING LAUNCH</h1>
         <br />
         <p>PSYCHE MISSION</p>
